// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the Header component menu should open on click 1`] = `
<div>
  <div
    class="user-actions-container"
  >
    <span
      class="menu-label"
    >
      My Account
      <svg
        aria-hidden="true"
        aria-label="arrow drop down icon"
        class="usa-icon--size-3"
        color="#fff"
        fill="currentColor"
        role="img"
      >
        <use
          href="sprite.svg#arrow_drop_down"
        />
      </svg>
    </span>
    <menu
      class="user-actions-menu usa-nav__secondary-links"
    >
      <li>
        <a
          href=""
        >
          <svg
            aria-hidden="true"
            aria-label="person icon"
            class="usa-icon--size-3"
            color="#fff"
            fill="currentColor"
            role="img"
          >
            <use
              href="sprite.svg#person"
            />
          </svg>
          Manage Profile
        </a>
      </li>
      <li>
        <a
          href=""
        >
          <svg
            aria-hidden="true"
            aria-label="people icon"
            class="usa-icon--size-3"
            color="#fff"
            fill="currentColor"
            role="img"
          >
            <use
              href="sprite.svg#people"
            />
          </svg>
          Request Role Change
        </a>
      </li>
      <li>
        <a
          href=""
        >
          <svg
            aria-hidden="true"
            aria-label="logout icon"
            class="usa-icon--size-3"
            color="#fff"
            fill="currentColor"
            role="img"
          >
            <use
              href="sprite.svg#logout"
            />
          </svg>
          Log Out
        </a>
      </li>
    </menu>
  </div>
</div>
`;

exports[`Test the Header component menu should open on click 2`] = `
<div>
  <div
    class="user-actions-container"
  >
    <span
      class="menu-label"
    >
      My Account
      <svg
        aria-hidden="true"
        aria-label="arrow drop up icon"
        class="usa-icon--size-3"
        color="#fff"
        fill="currentColor"
        role="img"
      >
        <use
          href="sprite.svg#arrow_drop_up"
        />
      </svg>
    </span>
    <menu
      class="user-actions-menu usa-nav__secondary-links"
      style="display: block;"
    >
      <li>
        <a
          href=""
        >
          <svg
            aria-hidden="true"
            aria-label="person icon"
            class="usa-icon--size-3"
            color="#fff"
            fill="currentColor"
            role="img"
          >
            <use
              href="sprite.svg#person"
            />
          </svg>
          Manage Profile
        </a>
      </li>
      <li>
        <a
          href=""
        >
          <svg
            aria-hidden="true"
            aria-label="people icon"
            class="usa-icon--size-3"
            color="#fff"
            fill="currentColor"
            role="img"
          >
            <use
              href="sprite.svg#people"
            />
          </svg>
          Request Role Change
        </a>
      </li>
      <li>
        <a
          href=""
        >
          <svg
            aria-hidden="true"
            aria-label="logout icon"
            class="usa-icon--size-3"
            color="#fff"
            fill="currentColor"
            role="img"
          >
            <use
              href="sprite.svg#logout"
            />
          </svg>
          Log Out
        </a>
      </li>
    </menu>
  </div>
</div>
`;
